# fs

./: .features.json  CMakeLists.txt  DESIGN.md  README.md  SKILLS.md  claude-progress.txt  init.sh
.agent/: architect.md  cpp_developer.md  qa_engineer.md  storage_expert.md
docs/: API_DESIGN_RATIONALE.md  DESIGN.md  METADATA_DESIGN.md
examples/: CMakeLists.txt  main.cpp
include/: kv_device.h  kvfs.h  metadata.h
src/: CMakeLists.txt  kvfs.cpp  mock_kv_device.cpp
test/: CMakeLists.txt
test/e2e/: file_operations_test.cpp  initialization_test.cpp
test/unit/: metadata_test.cpp  mock_kv_device_test.cpp
